--- a/experiment/requirements.txt
+++ b/experiment/requirements.txt
@@ -1,2 +1,10 @@
-numpy<=1.23.5
+pygame
+numpy>=1.11.2,<=1.23.5
+scipy>=0.18.1
 pandas
+Pillow
+neurokit
+pyxid
+python-docx
+cryptography
+statsmodels
